# python-project-50

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: pyci.yml
diff_calc/: gendiff.py
diff_calc/formatters/: json.py  plain.py  stylish.py
diff_calc/scripts/: main.py
gendiff/: __init__.py  cli.py  diff.py  parse.py  result.py
gendiff/formatters/: json.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
tests/: test_gendiff.py
tests/test_data/: correct_json.txt
